UHF-2694: Fix spacing under opening hours block on tpr unit

--- a/src/scss/components/content/_unit.scss
+++ b/src/scss/components/content/_unit.scss
@@ -190,6 +190,10 @@
       }
     }
 
+    .form-item:last-child {
+      margin-bottom: 0;
+    }
+
     p:first-of-type {
       margin-top: 0;
     }
